# uccc-pubmed-grader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile  netlify.toml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-05-14T02-46-11-945Z.yml  page-2026-05-14T02-46-24-669Z.yml
frontend/: index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: upload.spec.ts
frontend/public/: example-pubmed-grader.csv
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Dashboard.tsx  Footer.tsx  Header.tsx  ProgressPanel.tsx  RuleHeading.tsx  ScrollToTop.tsx  StatCard.tsx  UploadPanel.tsx  YearRangeFilter.tsx
frontend/src/hooks/: useGrading.ts
frontend/src/lib/: altmetric.ts  analytics.ts  columnDictionary.ts  concurrent.ts  csv.ts  icite.ts  stats.ts  unpaywall.ts  version.ts
frontend/src/lib/__tests__/: altmetric.test.ts  csv.test.ts  icite.test.ts  stats.test.ts  unpaywall.test.ts
frontend/src/pages/: About.tsx  DataDictionary.tsx  Grader.tsx
frontend/test-fixtures/: sample-pmids.csv
src/uccc_pubmed_grader/: __init__.py  api.py  app.py  cli.py  config.py  csv_io.py  icite.py  jobs.py  processor.py  stats.py
tests/: test_api.py  test_csv_io.py  test_health.py  test_icite.py  test_stats.py
